<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:weightSum="1">

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/crime_title_label" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textView"/>

    <EditText android:id="@+id/crime_title"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/crime_title_hint" />

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/crime_details_label"
              style="?android:listSeparatorTextViewStyle"/>

    <Button android:id="@+id/crime_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

    <CheckBox android:id="@+id/crime_solved"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="16dp"
              android:layout_marginRight="16dp"
              android:text="@string/crime_solved_label" />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="查询API"
            android:id="@+id/queryApi"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/apiView"/>

</LinearLayout>