<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:weightSum="1">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="新增"
                android:id="@+id/add" android:layout_marginBottom="5dp"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <EditText android:id="@+id/keyword"
                  android:layout_width="204dp"
                  android:layout_height="wrap_content"
                  android:hint="@string/crime_title_hint" android:layout_weight="0.72" android:layout_marginLeft="5dp"
                  android:layout_marginRight="5dp"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="查询"
                android:id="@+id/queryApi"/>
    </LinearLayout>

    <Spinner android:id="@+id/status"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawSelectorOnTop="true"
             android:prompt="@string/status_prompt"
             android:layout_marginLeft="5dp" android:layout_marginRight="5dp"/>

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content">

        <EditText android:id="@+id/dateFrom"
                android:layout_weight="1"
                android:hint="@string/employee_dateFrom"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:layout_marginLeft="5dp"/>

        <TextView android:layout_width="39dp"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:text="-"/>

        <EditText android:id="@+id/dateTo"
                android:layout_weight="1"
                android:hint="@string/employee_dateTo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:layout_marginRight="5dp"/>

    </LinearLayout>

    <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/listView" android:layout_marginLeft="5dp" android:layout_marginRight="5dp"
            android:layout_marginTop="20dp" android:layout_marginBottom="20dp"/>

</LinearLayout>